SERVER-10039 sorting ignored in returned query obj for differ