src/mongo/s/chunk_diff.hpp
@@ -281,9 +281,6 @@ namespace mongo {
 
         BSONObj query = queryB.obj();
 
-        LOG(2) << "major version query from " << *_maxVersion << " and over "
-               << _maxShardVersions->size() << " shards is " << query << endl;
-
         //
         // NOTE: IT IS IMPORTANT FOR CONSISTENCY THAT WE SORT BY ASC VERSION, TO HANDLE
         // CURSOR YIELDING BETWEEN CHUNKS BEING MIGRATED.
@@ -295,7 +292,10 @@ namespace mongo {
         Query queryObj(query);
         queryObj.sort(BSON( "lastmod" << 1 ));
 
-        return Query( query );
+        LOG(2) << "major version query from " << *_maxVersion << " and over "
+               << _maxShardVersions->size() << " shards is " << queryObj << endl;
+
+        return queryObj;
     }
 
 } // namespace mongo
